src/outbound_request/tests/snapshots/ciboulette__outbound_request__tests__select_success__with_include_related.snap
---
source: src/outbound_request/tests/select_success.rs
expression: response

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "articles",
      "id": "073b5936-0acb-4601-b4b7-9de607dfc2ef",
      "attributes": "<some data>",
      "relationships": {
        "author": {
          "data": {
            "type": "peoples",
            "id": "c49094ce-71ab-40d4-a642-ea200f72eac6"
          }
        }
      }
    }
  ],
  "included": [
    {
      "type": "peoples",
      "id": "c49094ce-71ab-40d4-a642-ea200f72eac6",
      "attributes": "<some data>"
    }
  ]
}
