src/outbound_request/tests/snapshots/ciboulette__outbound_request__tests__select_success__with_included.snap
---
source: src/outbound_request/tests/select_success.rs
expression: response

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "peoples",
      "id": "073b5936-0acb-4601-b4b7-9de607dfc2ef",
      "attributes": "<some data>",
      "relationships": {
        "articles": {
          "data": [
            {
              "type": "articles",
              "id": "c49094ce-71ab-40d4-a642-ea200f72eac6"
            },
            {
              "type": "articles",
              "id": "90e676f5-9598-44e7-9e5b-f0c7b1a188d1"
            }
          ]
        }
      }
    }
  ],
  "included": [
    {
      "type": "articles",
      "id": "c49094ce-71ab-40d4-a642-ea200f72eac6",
      "attributes": "<some data>"
    },
    {
      "type": "articles",
      "id": "90e676f5-9598-44e7-9e5b-f0c7b1a188d1",
      "attributes": "<some data>"
    }
  ]
}
